--- a/Codsoft/Task1-Landing-page/style.css
+++ b/Codsoft/Task1-Landing-page/style.css
@@ -13,13 +13,14 @@ body {
 
 .container {
     width: 90%;
-    margin:auto;
+    margin: auto;
 }
 
 .flex {
     display: flex;
     align-items: center;
 }
+
 .hover-links {
     color: #c5c2c2;
 }
@@ -81,35 +82,118 @@ body {
 }
 
 .header-sec {
-    height: 300px;
-    margin-top: 10rem;
+    height: 400px;
+    margin-top: 4rem;
+    position: relative;
+    align-items: start;
+    justify-content: space-between;
+    /* border: 20px solid red; */
+    /* background-image: url(./images.jfif); */
+}
+
+.header-sec .left-part {
+    width: 40%;
+    /* border: 2px solid red; */
+    padding: 1rem;
+}
+
+.header-sec .right-part {
+    width: 50%;
+    height: auto;
+    border: 20px solid #7c7979b1;
+    border-radius: 50px 20px;
+    overflow: hidden;
+}
+
+.header-sec .left-part h1 {
+    font-size: 70px;
+    font-weight: 900;
+    text-align: left;
+    margin: 20px 0;
+    line-height: 1.2;
+    color: #ff00aeb4;
+}
+
+.header-sec .left-part p {
+    text-align: left;
+    padding-block: 1rem;
+}
+
+input[type="radio"] {
+    display: none;
+}
+
+.featured-wrapper .featured-list {
+    display: grid;
+}
+
+.featured-wrapper .featured-list li {
+    list-style-type: none;
+    grid-column: 1;
+    grid-row: 1;
+    opacity: 0;
+    transition: opacity 0.25s;
+}
+
+.right-part .featured-list img {
+    width: 100%;
+    height: 100%;
+}
+.bg-remove{
+    mix-blend-mode: soft-light;
+}
+.featured-wrapper {
     position: relative;
 }
 
-.header-sec h1 {
-    font-size: 50px;
-    text-align: center;
-    margin-top: 50px;
-    color:#ff00aeb4;
+.featured-wrapper .dots {
+    list-style-type: none;
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
 }
 
-.header-sec p {
-    text-align: center;
-    width: 70%;
-    margin: auto;
-    padding-block: 1rem;
+.featured-wrapper .dots li:not(:last-child) {
+    margin-right: 8px;
+}
+
+.featured-wrapper .dots label {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    border: 1px solid rgb(255, 255, 255);
+    transition: background 0.25s;
+}
+
+[id="image1"]:checked~.featured-wrapper .featured-list li:nth-child(1),
+[id="image3"]:checked~.featured-wrapper .featured-list li:nth-child(3),
+[id="image2"]:checked~.featured-wrapper .featured-list li:nth-child(2),
+[id^="image"]:checked~.arrows [for^="image"]:hover::before,
+[id^="image"]:checked~.arrows [for^="image"]:hover::after {
+    opacity: 1;
+}
+
+[id="image1"]:checked~.featured-wrapper .dots [for="image1"],
+[id="image2"]:checked~.featured-wrapper .dots [for="image2"],
+[id="image3"]:checked~.featured-wrapper .dots [for="image3"] {
+    background: #ff00aeb4;
 }
 
 .header-sec .arrow {
     position: absolute;
     bottom: 0;
-    left: 50%;
+    left: 15%;
     background-color: #c19393;
     padding: 2px;
     border-radius: 5px;
+    animation: arrow-down 1.5s infinite;
 }
-.arrow:hover{
-    background-color:#c12b34;
+
+.arrow:hover {
+    background-color: #ff00aeb4;
 }
 
 
@@ -119,60 +203,88 @@ body {
     background-color: #ffffffea;
     color: #070707;
 } */
-.r-sec{
+.r-sec {
     margin: 5rem;
- justify-content: space-between;
+    justify-content: space-between;
 }
-.img-sec{
-    width:40% ;
+
+.img-sec {
+    width: 40%;
     /* border: 2px solid red; */
 }
-.img-sec img{
+
+.img-sec img {
     width: 100%;
     border-radius: 20px;
     box-shadow: 0px 0px 5px #3e3d45;
 }
-.text{
+
+.text {
     width: 58%;
     height: 250px;
     text-align: center;
     /* border: 2px solid red; */
 }
-.text h2{
-    padding-bottom:20px;
+
+.text h2 {
+    padding-bottom: 20px;
     font-size: 36px;
     color: #fefefedd;
 }
-.text p{
-    padding: 10px 30px ;
+
+.text p {
+    padding: 10px 30px;
     line-height: 1.5;
     /* border: 2px solid red; */
     margin: 1.2rem 0;
 }
-.text a{
+
+.text a {
     color: #e9dcdc;
     text-decoration: none;
 }
-.btn{
-    margin-top:5rem;
+
+.btn {
+    margin-top: 5rem;
 }
 
 
-.footer{
+.footer {
     background-color: #151414;
 }
-.footer-list{
+
+.footer-list {
     height: 60px;
     /* border: 2px solid red; */
     list-style-type: none;
     justify-content: center;
     gap: 20px;
 }
-.foot-items{
+
+.foot-items {
     border: 2px solid #302a2a;
     padding: 2px;
     border-radius: 5px;
 }
-.foot-items:hover{
+
+.foot-items:hover {
     border: 2px solid rgba(131, 7, 7, 0.804);
+}
+
+@keyframes arrow-down {
+    0% {
+        bottom: 0;
+        left: 15%;
+    }
+
+    50% {
+        bottom: -15px;
+        background-color: #fd07cc;
+        left: 15%;
+    }
+
+    100% {
+        bottom: 0;
+        left: 15%;
+    }
 }
